# braspagSdk-python

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml
braspag_sdk/: __init__.py  braspag.py  credentials.py  environment.py  payment.py  splitMerchant.py  splitPayment.py
braspag_sdk/apps/: __init__.py
braspag_sdk/apps/emv3ds/: __init__.py  environment.py  services.py
braspag_sdk/apps/emv3ds/data/: credentials.py
braspag_sdk/apps/emv3ds/requests/: __init__.py  get_access_token.py
braspag_sdk/apps/payments/: __init__.py  environment.py  services.py
braspag_sdk/apps/payments/data/: __init__.py  address.py  credentials.py  credit_card.py  customer.py  payment.py  (+1 more)
braspag_sdk/apps/silent_order_post/: __init__.py
braspag_sdk/apps/sop/: environment.py  services.py
braspag_sdk/apps/split/: environment.py  services.py
braspag_sdk/request/: base.py  createSale.py  createSplitMerchant.py  getOauth2Token.py  querySale.py  updateSale.py
braspag_sdk/utils/: __init__.py  base_request.py  environment.py  object_json.py
cielo/api30/: __init__.py  cieloEcommerce.py  creditCard.py  objectJSON.py  payment.py  recurrentPayment.py  sale.py
cielo/api30/request/: base.py  createCardToken.py  createSale.py  querySale.py  reactivateRecorrency.py
cieloApi3/api30/request/: base.py  queryRecorrency.py
cieloApi3/request/: base.py  deactivateRecorrency.py
example/: card.py  createCardToken.py  saleBoletoComplete.py  saleBoletoSimple.py  saleCard.py  saleCardRecurring.py  saleCardRecurringSchedule.py  saleCardToken.py
(+15 files in other folders)
